# Cmake_conf_windows_OS

./: .gitignore  CMakeLists.txt
include/: gv.hpp
lib/: CMakeLists.txt  gv.cpp
src/: stl.cpp
